2009-09-01  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Updated version, added two new module groups and 
	some cleanup.
	
	* pandoradb.sql: Added cascade_protection field in tagente and removed 
	old server information from 2.x scheme.
	
	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Added new fields (trecon_task 
	and tagente) and drop old server information from tagente table.
	
	* configurar_agente.php, agent_manager.php: Added cascade protection 
	GUI checkbox and logic.
	
	* images/help: Added graph directory for help.
	
	* help/en/cascade_protection.php: Added help topic.

2009-08-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_menu.php: add lines of code that I forget in the
	previus commits. Now the menu show correctly the extensions.

2009-08-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add external Module group "Not assigned"
	because there are modules with this module group as agent software.
	* extensions/module_groups.php: fix bug that the count are very wrong. And
	add the link to Full list of monitors with filter.

2009-08-30  Raul Mateos  <raulofpandora@gmail.com>

	* extensions/update_manager/main.php: Change Pandora FMS text to 3.0

	* extensions/update_manager/settings.php, godmode/alerts/extensions.php,
	godmode/alerts/alert_list.php, godmode/servers/plugin.php,
	godmode/db/db_sanity.php, godmode/snmp_console/snmp_alert.php,
	godmode/setup/*.php: Unify titles improving integrity of appearance.

2009-08-29  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Update build after last changes

	* operation/events/event_statistics.php, operation/extensions.php,
	godmode/alerts/alert*.php, godmode/alerts/configure_alert_compound.php:
	Unify titles, adding parent and change from h1 to h2.

	* operation/agentes/networkmap.php: Added style when agents not found.

2009-08-28  Miguel de Dios  <miguel.dedios@artica.es>
