@@ -1,0 +1,25 @@
+<?php
+/**
+ * @package Include/help/en
+ */
+?>
+<h1>Alert macros</h1>
+
+<p>
+The following macros are available:
+<ul>
+<li>_field1_: User defined field 1.</li>
+<li>_field2_: User defined field 2.</li>
+<li>_field3_: User defined field 3.</li>
+<li>_agent_: Name of the agent that fired the alert.</li>
+<li>_address_: Address of the agent that fired the alert.</li>
+<li>_timestamp_: Time when the alert was fired.</li>
+<li>_data_: Module data that caused the alert to fire.</li>
+<li>_alert_description_: Alert description.</li>
+<li>_alert_threshold_: Alert threshold.</li>
+<li>_alert_times_fired_: Number of times the alert has been fired.</li>
+</ul>
+<p>
+</p>
+Example: Agent _agent_ error: _alert_description_.
+</p>
