@@ -1,0 +1,25 @@
+<?php
+/**
+ * @package Include/help/en
+ */
+?>
+<h1>Macros de alertas</h1>
+
+<p>
+Las siguientes macros están disponibles:
+<ul>
+<li>_field1_: Campo 1 definido por el usuario.</li>
+<li>_field2_: Campo 2 definido por el usuario.</li>
+<li>_field3_: Campo 3 definido por el usuario.</li>
+<li>_agent_: Nombre del agente que disparó la alerta.</li>
+<li>_address_: Dirección del agente que disparó la alerta.</li>
+<li>_timestamp_: Hora y fecha en que se disparó la alerta.</li>
+<li>_data_: Dato que hizo que la alerta se disparase.</li>
+<li>_alert_description_: Descripción de la alerta.</li>
+<li>_alert_threshold_: Umbral de la alerta.</li>
+<li>_alert_times_fired_: Número de veces que se ha disparado la alerta.</li>
+</ul>
+<p>
+</p>
+Ejemplo: Error en el agente _agent_: _alert_description_.
+</p>
